a lot of new features

--- a/run.html
+++ b/run.html
@@ -19,13 +19,27 @@
 </head>
 
 <body onload="init();">
-	<div id="midground"></div>
-	<div id="foreground">
-		<div id="container">
-			<div id="center-container">
-				<div id="infovis"></div>
-			</div>
-		</div>
-	</div>
+<div id="container">
+
+<div id="left-container">
+
+
+
+
+<div id="id-list"></div>
+
+
+
+<div id="center-container">
+    <div id="infovis"></div>    
+</div>
+
+<div id="right-container">
+
+<div id="inner-details"></div>
+
+</div>
+
+<div id="log"></div>
 </body>
 </html>
