--- a/run.html
+++ b/run.html
@@ -8,38 +8,79 @@
 <link type="text/css" href="jit/examples/css/base.css" rel="stylesheet" />
 <link type="text/css" href="jit/examples/css/RGraph.css"
 	rel="stylesheet" />
+<link type="text/css" href="bootstrap/css/bootstrap.css"
+	rel="stylesheet" />
 
 <!--[if IE]><script language="javascript" type="text/javascript" src="../../Extras/excanvas.js"></script><![endif]-->
 
 <!-- JIT Library File -->
 <script language="javascript" type="text/javascript" src="jit/jit.js"></script>
+<script language="javascript" type="text/javascript"
+	src="bootstrap/js/bootstrap.js"></script>
+<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+
 
 <!-- Example File -->
 <script language="javascript" type="text/javascript" src="mvp.js"></script>
+
+
+<!-- Le fav and touch icons -->
+<link rel="shortcut icon" href="bootstrap/docs/assets/ico/favicon.ico">
+	<link rel="apple-touch-icon-precomposed" sizes="144x144"
+		href="bootstrap/docs/assets/ico/apple-touch-icon-144-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" sizes="114x114"
+			href="bootstrap/docs/assets/ico/apple-touch-icon-114-precomposed.png">
+			<link rel="apple-touch-icon-precomposed" sizes="72x72"
+				href="bootstrap/docs/assets/ico/apple-touch-icon-72-precomposed.png">
+				<link rel="apple-touch-icon-precomposed"
+					href="bootstrap/docs/assets/ico/apple-touch-icon-57-precomposed.png">
 </head>
 
 <body onload="init();">
-<div id="container">
+	<div id="container">
 
-<div id="left-container">
-
-
-
-
-<div id="id-list"></div>
+		<div id="left-container">
 
 
 
-<div id="center-container">
-    <div id="infovis"></div>    
-</div>
 
-<div id="right-container">
+			<div id="id-list"></div>
 
-<div id="inner-details"></div>
 
-</div>
+			<div id="midground"></div>
+			<div id="center-container">
+				<div id="foreground">
+					<div id="infovis"></div>
+					<div id=sidebar class="metal linear">
+						<form class="padded">
+							<br></br>
+							<h1>PyBros</h1>
+							<br></br> <label>Search</label> <input placeholder="Search"
+								type=text></input> <br></br> <label>UserName</label> <input
+								placeholder="Username" type=text></input> <br></br> <label>Password</label>
+							<input placeholder="Password" type=password></input> <br></br> <label>Your
+								Stocks</label> <select>
+								<option value="MyStocks">My Stocks</option>
+								<option value="NYSE">NYSE</option>
+								<option value="Mad Money">Mad Money</option>
+							</select> </br> <img src="pybros.gif" height="300px" width="200px"></img>
+						</form>
 
-<div id="log"></div>
+					</div>
+				</div>
+			</div>
+
+			<div id="right-container">
+
+				<div id="inner-details"></div>
+
+			</div>
+
+			<div id="log"></div>
+		</div>
+	</div>
 </body>
+
+
+
 </html>
