--- a/run.html
+++ b/run.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>RGraph - Tree Animation</title>
+<title>PYBROS</title>
 
 <!-- CSS Files -->
 <link type="text/css" href="jit/examples/css/base.css" rel="stylesheet" />
@@ -18,6 +18,8 @@
 <script language="javascript" type="text/javascript"
 	src="bootstrap/js/bootstrap.js"></script>
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script src="mootools-1.2.5-core-yc.js"></script>
+
 
 
 <!-- Example File -->
