more revisions, string parsing + logo

--- a/run.html
+++ b/run.html
@@ -65,7 +65,7 @@
 								<option value="MyStocks">My Stocks</option>
 								<option value="NYSE">NYSE</option>
 								<option value="Mad Money">Mad Money</option>
-							</select> </br> <img src="pybros.gif" height="300px" width="200px"></img>
+							</select> </br> <img src="pybros-alt.png" height="300px" width="200px"></img>
 						</form>
 
 					</div>
