--- a/newGraphApi/game.html
+++ b/newGraphApi/game.html
@@ -4,14 +4,23 @@
 </head>
 <body>
 </body>
-<script
-	src="jquery.js"
-	type="text/javascript"></script>
-<script src="gamescript.js" type="text/javascript"></script>
-<script src="jquery.hotkeys.js" type="text/javascript"></script>
-<script>
-	$(function() {
+
+
+
+			<div id="midground"></div>
+			<div id="center-container">
+				<div id="foreground"></div>
+			</div>
+
+
+
+	<link type="text/css" href="styles.css" rel="stylesheet" />
+	<script src="jquery.js" type="text/javascript"></script>
+	<script src="gamescript.js" type="text/javascript"></script>
+	<script src="jquery.hotkeys.js" type="text/javascript"></script>
+	<script>
+		$(function() {
 		$(document).ready(gamescript);
-	});
-</script>
+		});
+	</script>
 </html>
