--- a/newGraphApi/game.html
+++ b/newGraphApi/game.html
@@ -4,18 +4,14 @@
 </head>
 <body>
 </body>
-
-
-
-			<div id="midground"></div>
-			<div id="center-container">
-				<div id="foreground"></div>
-			</div>
-
-
+	<div id="midground"></div>
+	<div id="container">
+		<div id="foreground"></div>
+	</div>
 
 	<link type="text/css" href="styles.css" rel="stylesheet" />
 	<script src="jquery.js" type="text/javascript"></script>
+	<script src="kinetic-v3.10.4.min.js" type="text/javascript"></script>
 	<script src="gamescript.js" type="text/javascript"></script>
 	<script src="jquery.hotkeys.js" type="text/javascript"></script>
 	<script>
