--- a/newGraphApi/game.html
+++ b/newGraphApi/game.html
@@ -5,9 +5,11 @@
 <body>
 </body>
 	<div id="midground"></div>
-	<div id="container">
 		<div id="foreground"></div>
-	</div>
+		<div class="container" id="container">
+		</div>
+
+
 
 	<link type="text/css" href="styles.css" rel="stylesheet" />
 	<script src="jquery.js" type="text/javascript"></script>
